# sec4ai_papers

./: .gitignore  README.md  arxiv_priority_predictor.py  post_arxiv_to_telegram.py  pyproject.toml  run_daily.sh  score_arxiv_api_day.py  update_readme.py
.github/workflows/: daily.yml
